--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,8 @@
           <button class="menu-item" data-action="new-chat" role="menuitem">New Chat</button>
           <button class="menu-item" data-action="edit-persona" role="menuitem">Persona…</button>
           <button class="menu-item" data-action="toggle-search" role="menuitem">Context</button>
+          <div class="menu-sep"></div>
+          <button class="menu-item" data-action="prompt-templates" role="menuitem">Prompt Templates</button>
           <button class="menu-item" data-action="settings" role="menuitem">Settings…</button>
         </div>
       </div>
