--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' fill='%231b2130'/%3E%3Cpath d='M16 40 L32 16 L48 40' stroke='%236aa8ff' stroke-width='6' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E" />
 </head>
 <body>
+  <a href="#columns" class="skip-link">Skip to main content</a>
   <div class="app">
     <div class="app-header">
       <div class="brand"><strong>Deployable Knowledge v0.1 ᚼᚢᚴᛁᚾ:ᚬᚴ:ᛘᚢᚾᛁᚾ</strong></div>
@@ -31,7 +32,7 @@
       </div>
     </div>
 
-    <div class="columns" id="columns">
+    <div class="columns" id="columns" tabindex="-1">
       <div class="col" id="col-left"></div>
       <div class="splitter" id="splitter" role="separator" aria-orientation="vertical" aria-label="Resize Columns"></div>
       <div class="col" id="col-right"></div>
