--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -7,12 +7,13 @@
   <link rel="icon" href="/static/favicon.ico" />
 </head>
 <body>
+  <a href="#splash-body" class="skip-link">Skip to main content</a>
   <div class="app">
     <div class="app-header">
       <div class="brand"><strong>Deployable Knowledge</strong></div>
       <div class="fill"></div>
     </div>
-    <div class="splash-body">
+    <div class="splash-body" id="splash-body" tabindex="-1">
       <div class="miniwin splash-card">
         <div class="titlebar"><div class="title">Welcome</div></div>
         <div class="content"><div class="content-inner">
